# db-capstone-project

./: .gitignore  README.md  pyproject.toml
db_capstone_project/week1/: LittleLemonDB-ER.mwb  LittleLemonDB-schema.sql
db_capstone_project/week2/: InsertDataIntoLittleLemonDB.sql  LittleLemonDB-new-ER.mwb  LittleLemonDB-schema.sql
db_capstone_project/week2/adding-sales-report/: LittleLemonDB-Exercise1.sql  LittleLemonDB-Exercise2.sql
db_capstone_project/week2/table-booking-system/: Exercise1.sql  Exercise2.sql
db_capstone_project/week3/: DatabaseClient.ipynb  LittleLemonCapstoneDataVisualizations.twbx
