[tool.poetry]
name = "db-capstone-project"
version = "0.1.0"
description = "Test Project"
authors = ["Kalpit Rastogi <kr.kalpit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.7"
mysql-connector-python = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
